# mmap-csv

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  generator.py  main.cpp
include/: csv.hpp
scripts/: generator.py
src/: csv.cpp  csv.hpp  file.cpp  file.hpp  main.cpp  version.h
